[package]
name = "index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
week4 = { path = "../week4" }
input_reader = { path = "../input_reader" }
week5 = { path = "../week5" }
week7 = { path = "../week7" }




